* Sat May 8 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.95~dev
  Rationalize clearing and generation of DOPs, this makes epx/epy much
  more generally available. Fixed the test productions for the udev
  magic and added a troubleshooting note in INSTALL. cgps now displays
  epx/epy rather than eph. Speed is now always reported if our last
  two fixes were good, even if the GPS didn't compute it.  Reading
  packets from UDP datagrams by specifying a listening address and
  port is now supported, and the regression-test driver cam now be
  told to force this with -u; this enables regression testing in
  chroot jails where access to ptys is locked out. AIS code now
  interprets message type 6 and 8 application IDs correctly as a
  Designated Area Code and Functional ID pair. gpspipe has a new -T
  option for setting the timestamp format.  xgpsspeed is completely
  rewritten in Python, eliminating some dependencies on ancient X
  libraries.  We now ship a Qt binding for the client library.

* Tue Apr 20 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.94
  Error-checking in the 50bps subframe code has been greatly improved.
  The Garmin GPS driver can now use libusb, if it is present, to do
  device discovery. The libgps library has been split apart; the
  service functions used by the daemon now live in libgpsd. This
  will shave some code volume from GPSD client applications.  A packaging
  error that resulted in xgps not being shipped in 2.93 has been
  corrected. We now have stronger checking for valid ephemeris before
  extracting the leap-second offset; they should prevent many cases
  where gpsd might previously have used an invalid leap-second offset.

* Fri Apr 16 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.93
  Support for JSON dumping and parsing of AIS message types 25 and 26,
  not yet observed in the wild on AISHub. Fix Debian bug #569703.  by
  removing non-streaming mode from the Python exerciser. Fix Debian